--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
 </head>
 <body>
-  
+  <div id="app">
+    <main>
+      <div class="main-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, assumenda error aut impedit omnis animi porro similique eligendi unde vero quia sit voluptates sed magnam nesciunt vitae voluptate quaerat repellat.</div>
+    </main>
+
+    <aside>
+      <div class="aside-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem veritatis totam, architecto deserunt unde deleniti magni pariatur placeat, cupiditate nam dolore minima animi fuga ducimus fugit consequatur quae quia provident.</div>
+    </aside>
+  </div>
 </body>
 </html>
