conteudo aside e conteudo inicial do main

--- a/index.html
+++ b/index.html
@@ -14,11 +14,33 @@
 <body>
   <div id="app">
     <main>
-      <div class="main-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, assumenda error aut impedit omnis animi porro similique eligendi unde vero quia sit voluptates sed magnam nesciunt vitae voluptate quaerat repellat.</div>
+      <div class="main-container">
+        <div class="back">
+          <img src="assets/icons/arrow-left-02.svg" alt="Icone para voltar">
+          <span>Voltar</span>
+        </div>
+
+        <h1>Formulário de matrícula</h1>
+        <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+      </div>
     </main>
 
     <aside>
-      <div class="aside-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem veritatis totam, architecto deserunt unde deleniti magni pariatur placeat, cupiditate nam dolore minima animi fuga ducimus fugit consequatur quae quia provident.</div>
+      <div class="aside-container">
+        <header>
+          <img src="assets/logo.svg" alt="Logo estrelas do amanhã">
+          <h2>
+            Porque cada momento de 
+            <span>
+              aprendizado
+            </span>
+            conta
+          </h2>
+          <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+        </header>
+
+        <img src="assets/Illustration.svg" alt="Ilustração de uma professora com crianças">
+      </div>
     </aside>
   </div>
 </body>
