--- a/index.html
+++ b/index.html
@@ -115,7 +115,28 @@
                 <input type="text" id="state" name="state" disabled value="SP">
               </div>
             </div>
+          </fieldset>
 
+          <fieldset class="gardian">
+            <legend>Informações do responsável</legend>
+            <div class="input-wrapper">Nome do responsável<label for=""></label>
+            <input type="text" id="gardian" name="gardian">
+            <small>Principal responsável legal e contato de emergência</small>
+          </div>
+
+          <div class="input-wrapper">
+            <label for="phone">Telefone</label>
+            <input type="tel" name="phone" id="phone" placeholder="(10) 9 8765-4321">
+          </div>
+
+          <div class="input-wrapper">
+            <label for="mail">Email</label>
+            <input type="email" name="mail" id="mail" required>
+            <div class="error">
+              <img src="assets/icons/alert-circle.svg" alt="Incone de alerta vemrelho">
+              <span>Insira um e-mail válido</span>
+            </div>
+          </div>
           </fieldset>
         </form>
       </div>
