--- a/index.html
+++ b/index.html
@@ -138,6 +138,30 @@
             </div>
           </div>
           </fieldset>
+
+          <fieldset class="enroll-options">
+            <legend>Opções de matrícula</legend>
+
+            <div class="input-wrapper">
+              <label>Selecione o turno de estudo</label>
+
+              <div class="radio-wrapper">
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="study-shift" value="morning" id="morning">
+                  <img src="assets/icons/sun-cloud-02.svg" alt="incone de sol com nuvem">
+                  <label for="morning">Manhã</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="study-shift" value="evening" id="evening">
+                  <img src="assets/icons/sun-02.svg" alt="incone de sol">
+                  <label for="evening">Tarde</label>
+                </div>
+              </div>
+            </div>
+          </fieldset>
         </form>
       </div>
     </main>
