--- a/index.html
+++ b/index.html
@@ -52,11 +52,8 @@
 
             <div class="textarea-wrapper">
               <label for="medical-info">Informações médicas</label>
-              <textarea 
-              name="medical-info" 
-              id="medical-info" 
-              cols="30" rows="5" 
-              placeholder="A criança possui alguma condição médica que a escola deve estar ciente? (Se sim, espefifique)">
+              <textarea name="medical-info" id="medical-info" cols="30" rows="5"
+                placeholder="A criança possui alguma condição médica que a escola deve estar ciente? (Se sim, espefifique)">
               </textarea>
             </div>
 
@@ -68,10 +65,13 @@
                 <input type="file" id="birth-file" name="birth-file">
 
                 <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M34.9552 18.0221C34.97 18.022 34.985 18.022 35 18.022C39.9706 18.022 44 22.0588 44 27.0386C44 31.6796 40.5 35.5016 36 36M34.9552 18.0221C34.9848 17.6921 35 17.3579 35 17.0202C35 10.9339 30.0752 6 24 6C18.2465 6 13.5247 10.4253 13.0408 16.0638M34.9552 18.0221C34.7506 20.2952 33.8572 22.3692 32.4856 24.033M13.0408 16.0638C7.96796 16.5475 4 20.8278 4 26.0366C4 30.8834 7.43552 34.9264 12 35.8546M13.0408 16.0638C13.3565 16.0337 13.6765 16.0183 14 16.0183C16.2516 16.0183 18.3295 16.7639 20.001 18.022" stroke="#D6D3D1" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-                  <path d="M24 26V42M24 26C22.5996 26 19.9831 29.9886 19 31M24 26C25.4004 26 28.017 29.9886 29 31" stroke="#D6D3D1" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-                  </svg>
-                  
+                  <path
+                    d="M34.9552 18.0221C34.97 18.022 34.985 18.022 35 18.022C39.9706 18.022 44 22.0588 44 27.0386C44 31.6796 40.5 35.5016 36 36M34.9552 18.0221C34.9848 17.6921 35 17.3579 35 17.0202C35 10.9339 30.0752 6 24 6C18.2465 6 13.5247 10.4253 13.0408 16.0638M34.9552 18.0221C34.7506 20.2952 33.8572 22.3692 32.4856 24.033M13.0408 16.0638C7.96796 16.5475 4 20.8278 4 26.0366C4 30.8834 7.43552 34.9264 12 35.8546M13.0408 16.0638C13.3565 16.0337 13.6765 16.0183 14 16.0183C16.2516 16.0183 18.3295 16.7639 20.001 18.022"
+                    stroke="#D6D3D1" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M24 26V42M24 26C22.5996 26 19.9831 29.9886 19 31M24 26C25.4004 26 28.017 29.9886 29 31"
+                    stroke="#D6D3D1" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+
 
                 <p>
                   Clique aqui para <br>
@@ -83,7 +83,7 @@
           </fieldset>
 
           <fieldset class="address">
-            <legend>Endereço Residencial</legend>
+            <legend>Endereço residencial</legend>
 
             <div class="input-wrapper">
               <label for="cep">CEP</label>
@@ -93,8 +93,7 @@
             <div class="flex">
               <div class="input-wrapper flex-2">
                 <label for="street">Rua</label>
-                <input type="text" id="street" name="street"
-                value="Rua das Flores" disabled>
+                <input type="text" id="street" name="street" value="Rua das Flores" disabled>
               </div>
 
               <div class="input-wrapper flex-1">
@@ -106,8 +105,7 @@
             <div class="flex">
               <div class="input-wrapper flex-2">
                 <label for="city">Cidade</label>
-                <input type="text" id="city" name="city"
-                value="São Paulo" disabled>
+                <input type="text" id="city" name="city" value="São Paulo" disabled>
               </div>
 
               <div class="input-wrapper flex-1">
@@ -119,24 +117,26 @@
 
           <fieldset class="gardian">
             <legend>Informações do responsável</legend>
-            <div class="input-wrapper">Nome do responsável<label for=""></label>
-            <input type="text" id="gardian" name="gardian">
-            <small>Principal responsável legal e contato de emergência</small>
-          </div>
 
-          <div class="input-wrapper">
-            <label for="phone">Telefone</label>
-            <input type="tel" name="phone" id="phone" placeholder="(10) 9 8765-4321">
-          </div>
-
-          <div class="input-wrapper">
-            <label for="mail">Email</label>
-            <input type="email" name="mail" id="mail" required>
-            <div class="error">
-              <img src="assets/icons/alert-circle.svg" alt="Incone de alerta vemrelho">
-              <span>Insira um e-mail válido</span>
+            <div class="input-wrapper">
+              <label for="gardian">Nome do responsável</label>
+              <input type="text" id="gardian" name="gardian">
+              <small>Principal responsável legal e contato de emergência</small>
             </div>
-          </div>
+
+            <div class="input-wrapper">
+              <label for="phone">Telefone</label>
+              <input type="text" id="phone" name="phone" placeholder="(10) 9 8765-4321">
+            </div>
+
+            <div class="input-wrapper">
+              <label for="mail">Email</label>
+              <input type="email" name="mail" id="mail" required>
+              <div class="error">
+                <img src="assets/icons/alert-circle.svg" alt="ícone de alerta vermelho">
+                <span>Insira um e-mail válido</span>
+              </div>
+            </div>
           </fieldset>
 
           <fieldset class="enroll-options">
@@ -149,18 +149,68 @@
                 <div class="radio-inner">
                   <div class="radio-image"></div>
                   <input type="radio" name="study-shift" value="morning" id="morning">
-                  <img src="assets/icons/sun-cloud-02.svg" alt="incone de sol com nuvem">
+                  <img src="assets/icons/sun-cloud-02.svg" alt="ícone de sol com nuvem">
                   <label for="morning">Manhã</label>
                 </div>
 
                 <div class="radio-inner">
                   <div class="radio-image"></div>
                   <input type="radio" name="study-shift" value="evening" id="evening">
-                  <img src="assets/icons/sun-02.svg" alt="incone de sol">
+                  <img src="assets/icons/sun-02.svg" alt="ícone de sol">
                   <label for="evening">Tarde</label>
                 </div>
               </div>
             </div>
+
+            <div class="input-wrapper">
+              <label>Em qual esporte você gostaria de inscrever seu filho?</label>
+
+              <div class="radio-wrapper">
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="football">
+                  <img src="assets/icons/football.svg" alt="ícone de futebol">
+                  <label for="football">Futebol</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="basketball">
+                  <img src="assets/icons/basketball-02.svg" alt="ícone de basquete">
+                  <label for="basketball">Basquete</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="swimming">
+                  <img src="assets/icons/swimming.svg" alt="ícone de natação">
+                  <label for="swimming">Natação</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="yoga">
+                  <img src="assets/icons/yoga-02.svg" alt="ícone de yoga">
+                  <label for="yoga">Yoga</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="volleyball">
+                  <img src="assets/icons/volleyball.svg" alt="ícone de volleyball">
+                  <label for="volleyball">Vôlei</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="sport" id="boxing">
+                  <img src="assets/icons/boxing-glove-01.svg" alt="ícone de boxing">
+                  <label for="boxing">Boxe</label>
+                </div>
+              </div>
+            </div>
+
+
           </fieldset>
         </form>
       </div>
@@ -169,7 +219,7 @@
     <aside>
       <div class="aside-container">
         <header>
-          <img src="assets/logo.svg" alt="Logo estrelas do amanhã">
+          <img src="assets/logo.svg" alt="Logo Estrelas do Amanhã">
           <h2>
             Porque cada momento de
             <span>
@@ -177,10 +227,14 @@
             </span>
             conta
           </h2>
-          <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+          <p>
+            Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e
+            estimulante.
+          </p>
         </header>
 
-        <img src="assets/Illustration.svg" alt="Ilustração de uma professora com crianças">
+        <img src="assets/Illustration.svg" alt="Ilustração de um professora com crianças prestando atenção">
+
       </div>
     </aside>
   </div>
